score and essay